infrastructure/apps/media-server/prowlarr/prowlarr-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-svc
  namespace: media
spec:
  selector:
    app: prowlarr
  ports:
  - port: 80
    targetPort: 9696
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: prowlarr.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr-svc
            port:
              number: 80
